# AI_Agent_Template_Google_ADK

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/backend/: main.py
{{cookiecutter.project_slug}}/src/backend/core/: config.py  security.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_api.py
