[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [{name = "{{cookiecutter.author_name}}"}]
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "google-adk",
    "google-genai",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "uv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/core", "src/environment", "src/utils"]
