[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = [{name = "{{cookiecutter.author_name}}"}]
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "google-adk",
    "google-genai",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "uv",

    "google-adk",
    "google-genai",
    
    # Backend Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.7",
    
    # Utils
    "python-dotenv",
    "gunicorn",   # For production deployment
    "httpx",      # For async requests
    "loguru"      # Better logging
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/core", "src/environment", "src/utils"]
