[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.1"
description = "{{cookiecutter.description}}"
authors = [{name = "{{cookiecutter.author_name}}"}]
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    # AI & Agent Core
    "google-adk",
    "google-genai",
    "pydantic",
    "pyyaml",
    "uv",
    
    # Backend Core
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.7",
    
    # Storage & State
    "sqlmodel>=0.0.16",     # For relational DB
    "qdrant-client>=1.8.0", # For Vector DB/Agent Memory
    
    # Observability
    "langchain-core",       # Often used for tracing standards
    "opentelemetry-api",
    
    # Utils
    "python-dotenv",
    "gunicorn",   # For production deployment
    "httpx",      # For async requests
    "loguru"      # Better logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"] # Pyflakes, pycodestyle, isort